--- a/workspaces/client/src/styles/index.css
+++ b/workspaces/client/src/styles/index.css
@@ -4,6 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 14px!important;
+  background: aliceblue!important;
 }
 
 code {
